cabal-version: 1.12
name:           gramps
version:        0.1.0.0
synopsis:       Grammar Tooling
description:    Please see the README on GitHub at <https://github.com/lancelet/gramps#readme>
homepage:       https://github.com/lancelet/gramps#readme
bug-reports:    https://github.com/lancelet/gramps/issues
author:         Jonathan Merritt
maintainer:     j.s.merritt@gmail.com
copyright:      2020 Jonathan Merritt
license:        BSD3
license-file:   LICENSE
build-type:     Simple
category:       Text
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: git://github.com/lancelet/gramps.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
      Lib
  ghc-options:
    -Wall 
    -Wincomplete-uni-patterns 
    -Wincomplete-record-updates 
    -Wmissing-import-lists
  build-depends:
      base >=4.7 && <5

executable gramps
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options: 
    -Wall 
    -Wincomplete-uni-patterns 
    -Wincomplete-record-updates 
    -Wmissing-import-lists
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , gramps

test-suite gramps-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options:
    -Wall 
    -Wincomplete-uni-patterns 
    -Wincomplete-record-updates 
    -Wmissing-import-lists
  build-depends:
      base >=4.7 && <5
    , gramps
